--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-    <script src="/index.html" type = "text/javascript"></script>
 
 <body>
-    Name: <input type="text" name="name" id="name" value=""><br>
-    <button onclick="add(document.getElementById('name').value)">send</button>
+    <script src="./index.html" type="text/javascript"></script> Name:
+    <input type="text" name="name" id="name" value="">
+    <br>
+    <button onclick="currentusername(document.getElementById('name').value)">send</button>
 </body>
 
 </html>
