--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
 
 <body>
-    <script src="./index.html" type="text/javascript"></script> Name:
+    
+    <script src="./index.html" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>Text:
+    <input type="text" name="text" id="text" value="">
+    <br> Name:
     <input type="text" name="name" id="name" value="">
-    <br>
-    <button onclick="currentusername(document.getElementById('name').value)">send</button>
+    <p></p>
+    <!-- <button onclick="currentusername(document.getElementById('name').value)">send</button> -->
 </body>
 
 </html>
