--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
+<!-- <!DOCTYPE html>
 <html>
 
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+
 <body>
-    
-    <script src="./index.html" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>Text:
-    <input type="text" name="text" id="text" value="">
-    <br> Name:
-    <input type="text" name="name" id="name" value="">
-    <p></p>
-    <!-- <button onclick="currentusername(document.getElementById('name').value)">send</button> -->
+
+    <p>If you click on me, I will disappear.</p>
+    <p>Click me away!</p>
+    <p>Click me too!</p>
+     
+<form id = "target" action = "destination.html" >
+<input type="text" name="text" id="text" value="">
+<input type="text" name="name" id="name" value="">
+</form >
+</body>
+<p></p>
+<script src="./fun.js" type="text/javascript"></script>
+
+</body>
+
+</html> -->
+
+
+
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+</head>
+
+<body>
+    <form id="form1">
+        <div>
+            <input type="text" name="text" id="text" value="">
+        </div>
+    </form>
+    <form id="form2">
+        <div>
+            <input type="text" name="name" id="name" value="">
+        </div>
+    </form>
+    <span></span>
+    <script src="./fun.js" type="text/javascript"></script>
 </body>
 
 </html>
