--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="text" name="name" id="name" value="">
         </div>
     </form>
-    <span></span>
+    <span id="span"></span>
     <script src="./fun.js" type="text/javascript"></script>
 </body>
 
