--- a/index.html
+++ b/index.html
@@ -1,30 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-
-<body>
-
-    <p>If you click on me, I will disappear.</p>
-    <p>Click me away!</p>
-    <p>Click me too!</p>
-     
-<form id = "target" action = "destination.html" >
-<input type="text" name="text" id="text" value="">
-<input type="text" name="name" id="name" value="">
-</form >
-</body>
-<p></p>
-<script src="./fun.js" type="text/javascript"></script>
-
-</body>
-
-</html> -->
-
-
-
 <!doctype html>
 <html lang="en">
 
@@ -34,16 +7,14 @@
 </head>
 
 <body>
-    <form id="form1">
-        <div>
-            <input type="text" name="text" id="text" value="">
-        </div>
-    </form>
-    <form id="form2">
-        <div>
-            <input type="text" name="name" id="name" value="">
-        </div>
-    </form>
+    <div id ="DynamicValueAssignedHere">
+            <div>
+                <input type="text" name="Text" id="name" value="">
+            </div>
+            <div>
+                <input type="text" name="Name" id="surname" value="">
+            </div>
+    </div>
     <span id="span"></span>
     <script src="./fun.js" type="text/javascript"></script>
 </body>
